--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" href="{{site.baseurl}}/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{site.baseurl}}/css/bootstrap-theme.min.css">
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+<link rel="stylesheet" href="{{site.baseurl}}/css/pure-min.css">
 <link rel="stylesheet" href="{{site.baseurl}}/side-menu.css">
 <link rel="stylesheet" href="{{site.baseurl}}/syntax.css">
 <link rel="stylesheet" href="{{site.baseurl}}/main.css">
