Point to the external aliBuild ALICE tutorial
* Old pages have been maintained: they redirect to the external site
* There is only one tutorial link pointing to the external documentation
* Tutorial from the external documentation is now compatible with the removed
  dataflow tutorial as agreed with @vascobarroso
* Added in the external documentation proper instructions to use several
  defaults at the same time with `aliBuild` and `alienv`

--- a/docs/_layouts/main.html
+++ b/docs/_layouts/main.html
@@ -26,7 +26,12 @@
       <ul class="pure-menu-list">
       {% for cat in site.menu %}
         <li class="pure-menu-item menu-item-section menu-item-devided">
+          {% assign proto = cat.name|slice: 0,4 %}
+          {% if proto == "http" %}
+          <a href="{{cat.name}}" class="pure-menu-link">{{ cat.label }}</a>
+          {% else %}
           <a href="{{site.baseurl}}/{{cat.name}}" class="pure-menu-link">{{ cat.label }}</a>
+          {% endif %}
         </li>
         {% for sub in cat.items %}
         <li>
